fix(yalb-1319): update gap to increase space between elements

--- a/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
+++ b/components/03-organisms/galleries/media-grid/_yds-media-grid-modal.scss
@@ -82,7 +82,7 @@ $modal-speed: var(--animation-speed-slow);
     )
     minmax(0, 1fr) var(--size-click-target-minimum);
   /* stylelint-enable scss/operator-no-newline-before */
-  gap: var(--size-spacing-5);
+  gap: var(--size-spacing-6);
   max-height: 100%;
 
   @media (min-width: tokens.$break-s) {
